<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/home_root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/backgroundDark"
    tools:context=".Home">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_status_message"
        android:text="Frank"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/space1"
        android:layout_centerHorizontal="true"/>

    <Space
        android:id="@+id/space1"
        android:layout_above="@id/home_status_image"
        android:layout_width="match_parent"
        android:layout_height="160dp" />

    <ImageView
        android:id="@+id/home_status_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/connection_status_label"/>

    <Space
        android:id="@+id/space2"
        android:layout_below="@id/home_status_image"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space2"
        android:id="@+id/bt_switch"
        android:text="Bluetooth"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <Space
        android:id="@+id/space3"
        android:layout_below="@id/bt_switch"
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/connection_toggle"
        android:textOff="@string/connect_to_frank"
        android:textOn="@string/disconnect_from_frank"
        android:backgroundTint="@color/primary"
        android:minWidth="250dp"
        android:minHeight="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space3"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_nav_view"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>